; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_decoration.c_server_decoration_handle_mode.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_decoration.c_server_decoration_handle_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_server_decoration = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }
%struct.wl_listener = type { i32 }
%struct.sway_view = type { i64, i32 }

@mode = common dso_local global i32 0, align 4
@WLR_SERVER_DECORATION_MANAGER_MODE_CLIENT = common dso_local global i64 0, align 8
@deco = common dso_local global %struct.sway_server_decoration* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @server_decoration_handle_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @server_decoration_handle_mode(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_server_decoration*, align 8
  %6 = alloca %struct.sway_view*, align 8
  %7 = alloca i32, align 4
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %9 = load %struct.sway_server_decoration*, %struct.sway_server_decoration** %5, align 8
  %10 = ptrtoint %struct.sway_server_decoration* %9 to i32
  %11 = load i32, i32* @mode, align 4
  %12 = call %struct.sway_server_decoration* @wl_container_of(%struct.wl_listener* %8, i32 %10, i32 %11)
  store %struct.sway_server_decoration* %12, %struct.sway_server_decoration** %5, align 8
  %13 = load %struct.sway_server_decoration*, %struct.sway_server_decoration** %5, align 8
  %14 = getelementptr inbounds %struct.sway_server_decoration, %struct.sway_server_decoration* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = call %struct.sway_view* @view_from_wlr_surface(i64 %17)
  store %struct.sway_view* %18, %struct.sway_view** %6, align 8
  %19 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %20 = icmp eq %struct.sway_view* %19, null
  br i1 %20, label %31, label %21

21:                                               ; preds = %2
  %22 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %23 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.sway_server_decoration*, %struct.sway_server_decoration** %5, align 8
  %26 = getelementptr inbounds %struct.sway_server_decoration, %struct.sway_server_decoration* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %24, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %21, %2
  br label %49

32:                                               ; preds = %21
  %33 = load %struct.sway_server_decoration*, %struct.sway_server_decoration** %5, align 8
  %34 = getelementptr inbounds %struct.sway_server_decoration, %struct.sway_server_decoration* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @WLR_SERVER_DECORATION_MANAGER_MODE_CLIENT, align 8
  %39 = icmp eq i64 %37, %38
  %40 = zext i1 %39 to i32
  store i32 %40, i32* %7, align 4
  %41 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @view_update_csd_from_client(%struct.sway_view* %41, i32 %42)
  %44 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %45 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @arrange_container(i32 %46)
  %48 = call i32 (...) @transaction_commit_dirty()
  br label %49

49:                                               ; preds = %32, %31
  ret void
}

declare dso_local %struct.sway_server_decoration* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local %struct.sway_view* @view_from_wlr_surface(i64) #1

declare dso_local i32 @view_update_csd_from_client(%struct.sway_view*, i32) #1

declare dso_local i32 @arrange_container(i32) #1

declare dso_local i32 @transaction_commit_dirty(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
